More changes to overview of customer's requirements

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -30,22 +30,22 @@
 	\subsection{Design Constraints}
 	With customer needs comes design constraints. One design constraint is time. We have been given one semester to work on this system. Another constraint is going to be cost. We have been given a budget of \$500 to create this system.\\ 
 	\subsection{Feasibility of Designs}
-	Criteria to judge the feasibility of the design has been outlined by our sponsor ArcelorMittal. We were given requirements necessary for designing and implementing a Minimum Viable Product. The requirements are based on ArcelorMitall's current implementation of problem, Field ID. To satisfy necessary criteria, our goal is to implement a software-based solution, hence; automating the entire process. Ultimately feasibility will be judged based on universal usability. In order to rank the feasible designs, team three must also consider criteria based on speed of response time, organization of documentation, report generation, and ability to publish software development environment into production. \\
-	Each set of conceptual designs/variations meets the feasibility criteria. Team three's solution meets the goals of the customer's needs; the proposed solution has been approved by both team sponsor and facilitator. Trade off studies that need be conducted to assess the above concerns are speed of response time, and difficulty to move our software development environment to production. 
+	Criteria to judge the feasibility of the design has been outlined by team three's sponsor ArcelorMittal. We were given requirements necessary for designing and implementing a Minimum Viable Product. The requirements are based on ArcelorMitall's current implementation of problem, Field ID. To satisfy necessary criteria, team three's goal is to implement a software-based solution, hence; automating the entire process. Ultimately feasibility will be judged based on universal usability. In order to rank the feasible designs, team three must also consider criteria based on speed of response time, organization of documentation, report generation, and ability to publish software development environment into production. \\
+	Each set of conceptual designs/variations meets the feasibility criteria. Team three's solution meets the goals of the customer's needs; the proposed solution has been approved by both team sponsor and facilitator. Trade off studies that need be conducted to assess the above concerns are speed of response time, and difficulty to move team three's software development environment to production. In a software environment, feasible conceptual designs are always subjected to change. \\
 	\subsection{Risks}
-	Most risks are going to revolve around the security of our proposed system. This is solved by the implementation on ArcelorMittal's servers. ArcelorMittal has their own security team to ensure that the proposed system once moved to a production environment will be secure. In addition the data we are dealing with is not confidential.That being so, all code will be written in a secure manner, special attention will be paid to SQL queries, and SQL injections.   
+	A majority of risks revolve around the security of team three's proposed system. This is solved by the implementation and integration on ArcelorMittal's servers. Due to safety and liability restrictions, team three is unable to gain access to ArcelorMittal systems; most specifically their database. Team three's solution is designed to integrated into ArcelorMittal's existing system. \\
 	\subsection{Overview of System Models}
-	As the nature of this project is more software oriented then hardware, developing models for system senors, actuators, interfaces or other principle level system components are not a main concern of Team 3. So as a result, no validation is needed. Similarly, issues involving control processes are not a concern. \\
-	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certain times when the application is operating. So that is one issue that has to be accommodated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  In addition our software is limited to run on the hardware specifics of the Nexus 7, which are ULP GeForce graphics card, CPU is detailed as Quad Core. There is 1 GB of RAM.   \\
+	As the nature of this project is more software oriented then hardware, developing models for system senors, actuators, interfaces or other principle level system components are not a concern. As a result, no validation is needed. Similarly, issues involving control processes are not a concern. \\
+	However, Operating Systems at different interconnections distances is a concern. ArcelorMittal has a special requirement that team three's mobile application must operate without WIFI; this issue must be accommodated. Additionally storage on the Nexus 7 tablet is also a concern. A limit of 16GB of memory is crucial; therefore, team three's application must be well within that limit.  Finally, the software must be compatible with hardware specifics of the Nexus 7, which are a ULP GeForce graphics card, Quad Core processors, and 1GB of RAM. \\
 	
 	SOMEONE CITE THIS PLEASE http://www.gsmarena.com/asus_google_nexus_7-4850.php \\
 	
 	\subsection{Developmental Strategy}
-	Team three has picked a bottom up approach. We have chosen to implement the lower levels first. This will be easier for the team three because we can test the database communication first. In addition when we are trying to display data on the user interface, we have an implemented API to make that connection for testing. This is going to be easier then just hard coding data which will not be as efficient.  We also set up the development environments for testing. 
+	Team three has picked a bottom-up approach. Team three will implement lower levels specifics at highest level of importance. This gives the team the ability to test database communication first. Further, when fusing data into the user interface, the API's implemented create connections for testing. This allows the team to efficiently design an experience while minimizing on constraints. Developmental tools for the environments will also be utilized for testing. \\ 
 
 \section{High Level Languages}\label{highlevel}
 	\subsection{Languages}
-	As for compilers on the Back End most things will be written in the programming language Python, which does not have a compiler. For the email service, SMTP python libraries will be used, as well as a couple web framework libraries. The web framework Libraries are provided by Django, which is based off of Python. \\
+	As for compilers on the Back End most things will be written in the programming language Python, which does not have a compiler. For the email service, SMTP python libraries will be used, as well as various web framework libraries. The web framework libraries are provided by Django, a high-level Python Web framework. \\
 	Android Application Development is written in Java which does have a compiler. On the administrator side, Jquery, Twitter's Bootstrap will be used for web development.   \\ SOMEWHERE IN HERE REFER TO THE COMPARISIONS DOWN BELOW IN A DIFFERENT FIGURE
 
 
