--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -28,7 +28,7 @@
 	\subsection{Overview of System Models}
 	As the nature of this project is more software oriented then hardware, developing models for system senors, actuators, interfaces or other principle level system components are not a main concern of Team 3. So as a result, no validation is needed. Similarly, issues involving control processes are not a concern. \\
 	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certain times when the application is operating. So that is one issue that has to be accommodated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  In addition our software is limited to run on the hardware specifics of the Nexus 7, which are ULP GeForce graphics card, CPU is detailed as Quad Core. There is 1 GB of RAM.   \\
-	
+	\cite{nexus7}
 	SOMEONE CITE THIS PLEASE http://www.gsmarena.com/asus_google_nexus_7-4850.php \\
 	
 	\subsection{Developmental Strategy}
@@ -356,7 +356,7 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 			\end{figure}
 		\end{landscape}
 		
-		%\bibliographystyle{plain}
-		%\bibliography{proposalbib.bib}
+		\bibliographystyle{plain}
+		\bibliography{proposalbib}
 	%	\printbibliography
 \end{document}
