changed title page

--- a/title.tex
+++ b/title.tex
@@ -76,7 +76,7 @@
 				
 			\end{flushright}
 			
-		\end{minipage}\\[2cm]
+		\end{minipage}\\[1cm]
 		
 		% If you don't want a supervisor, uncomment the two lines below and remove the section above
 		%\Large \emph{Author:}\\
@@ -86,7 +86,7 @@
 		%	DATE SECTION
 		%----------------------------------------------------------------------------------------
 		
-		{\large \today}\\[2cm] % Date, change the \today to a set date if you want to be precise
+		{\large \today}\\[0.5cm] % Date, change the \today to a set date if you want to be precise
 		
 		%----------------------------------------------------------------------------------------
 		%	LOGO SECTION
@@ -94,25 +94,21 @@
 		
 		
 		
-		\begin{minipage}[t]{0.5\textwidth}
-			\begin{flushright} 
-		\includegraphics{egr_logo.png}\\[1cm]  % Include a department/university logo - this will require the graphicx package
-		\end{flushright}
-		\end{minipage}\\[3cm]
-		\begin{minipage}[t]{0.5\textwidth}
-			\begin{flushleft} 
+		\begin{minipage}[t]{0.4\textwidth}
+			\begin{center} 
+			\includegraphics{egr_logo.png}%\\[1cm]  % Include a department/university logo - this will require the graphicx package
+			\end{center}
+		\end{minipage}%
+		\begin{minipage}[t]{0.4\textwidth}
+			\begin{center} 
 		\includegraphics{MSUSealBlack1inch.png}
-			\end{flushleft}
-		\end{minipage}\\[3cm]
+			\end{center}
+		\end{minipage}\\[2cm]
 	\begin{abstract}
-		Design team three has been asked to create a system to keep track of safety equipment on ArcelorMittal's buildings. To do this the team needs to build some systems. These systems will enable administrators to both monitor compliance standards on areas they are in charge of, and make sure that safety equipment is being properly checked and documented. Reports will be sent out periodically on the above to said administrators.  On the user end, an Android application  that uses a scanner will be created that will enable users to quickly answer questions on safety equipment standards.  This project proposal is broken into the following parts:
-		\begin{enumerate}
-			\item The teams current understanding of the project.
-			\item Define the project in such a way that it will be easy to follow for developers that are maintaining the project for years to come.
-			\item Demonstrate that the team has internalized the design challenge faced.
-		\end{enumerate}
+		Design team three has been asked to create a system to keep track of safety equipment on ArcelorMittal's buildings. To do this the team needs to build some systems. These systems will enable administrators to both monitor compliance standards on areas they are in charge of, and make sure that safety equipment is being properly checked and documented. Reports will be sent out periodically on the above to said administrators.  On the user end, an Android application  that uses a scanner will be created that will enable users to quickly answer questions on safety equipment standards.
+
 	\end{abstract}
-		\\[1cm] 
+		%\\[1cm] 
 		% Include a department/university logo - this will require the graphicx package
 		%----------------------------------------------------------------------------------------
 		
