--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -10,17 +10,7 @@
 			\let\clearpage\relax
 			\listoftables
 			\endgroup
-			\newpage
-	%make the abstract
-	\begin{abstract}
-		Design Team 3 has been asked to create a system to keep track of safety equipment on ArcelorMittal's buildings. To do this the team needs to build some systems. These systems will enable administrators to both monitor compliance standards on areas they are in charge of, and make sure that safety equipment is being properly checked and documented. Reports will be sent out periodically on the above to said administrators.  On the user end, an Android application  that uses a scanner will be created that will enable users to quickly answer questions on safety equipment standards.  This project proposal is broken into the following parts:
-		\begin{enumerate}
-			\item The teams current understanding of the project.
-			\item Define the project in such a way that it will be easy to follow for developers that are maintaining the project for years to come.
-			\item Demonstrate that the team has internalized the design challenge faced.
-		\end{enumerate}
-	\end{abstract}
-	
+			\newpage	
 
 \part{Overview of Customer's Requirements}
 \section{Background Research}\label{research}
@@ -42,7 +32,7 @@
 	However, Operating Systems at different interconnections distances is a concern. ArcelorMittal has a special requirement that team three's mobile application must operate without WIFI; this issue must be accommodated. Additionally storage on the Nexus 7 tablet is also a concern. A limit of 16GB of memory is crucial; therefore, team three's application must be well within that limit.  Finally, the software must be compatible with hardware specifics of the Nexus 7, which are a ULP GeForce graphics card, Quad Core processors, and 1GB of RAM. \\
 	
 	\cite{nexus7}
-	SOMEONE CITE THIS PLEASE http://www.gsmarena.com/asus_google_nexus_7-4850.php \\
+	SOMEONE CITE THIS PLEASE http://www.gsmarena.com/asus\_google\_nexus\_7-4850.php \\
 	
 	\subsection{Developmental Strategy}
 	Team three has picked a bottom-up approach. Team three will implement lower levels specifics at highest level of importance. This gives the team the ability to test database communication first. Further, when fusing data into the user interface, the API's implemented create connections for testing. This allows the team to efficiently design an experience while minimizing on constraints. Developmental tools for the environments will also be utilized for testing. \\ 
