--- a/title.tex
+++ b/title.tex
@@ -105,8 +105,7 @@
 			\end{center}
 		\end{minipage}\\[2cm]
 	\begin{abstract}
-		Design team three has been asked to create a system to keep track of safety equipment on ArcelorMittal's buildings. To do this the team needs to build some systems. These systems will enable administrators to both monitor compliance standards on areas they are in charge of, and make sure that safety equipment is being properly checked and documented. Reports will be sent out periodically on the above to said administrators.  On the user end, an Android application  that uses a scanner will be created that will enable users to quickly answer questions on safety equipment standards.
-
+	The purpose of this project is to create a way to electronically keep track of safety inspection information for various safety equipment in ArcelorMittal plants.  This will improve the current method of manual, paper records and minimize data loss.This will also allow inspections results to be automatically consolidated in one central database.  Reports will then be generated from the central database to determine items in each location that pass or fail inspection, drastically improving the current record-keeping system of safety equipment at ArcelorMittal.
 	\end{abstract}
 		%\\[1cm] 
 		% Include a department/university logo - this will require the graphicx package
