--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -21,7 +21,7 @@
 \part{Overview of Customer's Requirements}
 \section{Background Research}\label{research}
 	There is background research that needs to be implemented to characterize primary hardware and software components that are needed for a successful project. \\
-	\subsection{Assessing Customer Needs}
+	\subsection{Assessing Customer Needs}\label{custneeds}
 
 	The customer's needs, as well as the needs of their users, are team three's highest priority. Team three's sponsor, our primary point of contact, is Jim Lang with ArcelorMittal. Our sponsor clearly defines ArcelorMittal's needs, and how the user will be interacting with the system. Team three's customer's needs are clearly documented by ArcelorMittal. This documentation assess the needs and interests of the ultimate user. \\ 
 
